php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #61374 html_entity_decode tries to decode code points that don't exist in ISO-8859-1
Submitted: 2012-03-13 15:13 UTC Modified: 2012-03-13 18:08 UTC
From: cataphract@php.net Assigned: cataphract (profile)
Status: Closed Package: *General Issues
PHP Version: 5.4SVN-2012-03-13 (SVN) OS: Irrelevant
Private report: No CVE-ID: None
 [2012-03-13 15:13 UTC] cataphract@php.net
Description:
------------
html_entity_decode tries to decode code points that don't exist in ISO-8859-1. The result is that the codepoint(s) being written mod 256.

Test script:
---------------
<?php
echo html_entity_decode('&OElig;', 0, 'ISO-8859-1');

Expected result:
----------------
&OElig;

Actual result:
--------------
R

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2012-03-13 15:13 UTC] cataphract@php.net
-Assigned To: +Assigned To: cataphract
 [2012-03-13 18:08 UTC] cataphract@php.net
Automatic comment from SVN on behalf of cataphract
Revision: http://svn.php.net/viewvc/?view=revision&amp;revision=324199
Log: - Fixed bug #61374: html_entity_decode tries to decode code points that don't
  exist in ISO-8859-1.
 [2012-03-13 18:08 UTC] cataphract@php.net
Fixed in SVN.
 [2012-03-13 18:08 UTC] cataphract@php.net
-Status: Assigned +Status: Closed
 [2012-04-18 09:45 UTC] laruence@php.net
Automatic comment on behalf of cataphract
Revision: http://git.php.net/?p=php-src.git;a=commit;h=efc94f311593d33093b8ad7f1f036deaa23df052
Log: - Fixed bug #61374: html_entity_decode tries to decode code points that don't   exist in ISO-8859-1.
 [2012-07-24 23:36 UTC] rasmus@php.net
Automatic comment on behalf of cataphract
Revision: http://git.php.net/?p=php-src.git;a=commit;h=efc94f311593d33093b8ad7f1f036deaa23df052
Log: - Fixed bug #61374: html_entity_decode tries to decode code points that don't   exist in ISO-8859-1.
 [2013-11-17 09:33 UTC] laruence@php.net
Automatic comment on behalf of cataphract
Revision: http://git.php.net/?p=php-src.git;a=commit;h=efc94f311593d33093b8ad7f1f036deaa23df052
Log: - Fixed bug #61374: html_entity_decode tries to decode code points that don't   exist in ISO-8859-1.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 19:00:02 2026 UTC