- Fixed bug #61374: html_entity_decode tries to decode code points that don't   exist in ISO-8859-1.